--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "conways-life",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://meltzerkyle.github.io/conways-game-of-life/",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "react": "^16.6.3",
@@ -26,7 +27,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://<github-username>.github.io/<github-repo-name>/",
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
